update skill sertifikasi

--- a/about/index.html
+++ b/about/index.html
@@ -61,10 +61,15 @@
 	<li>Artikel Ilmiah: Merancang Git Server dengan Pendekatan GitHub Social Coding dalam Peningkatan Pembelajaran Mahasiswa <a href="http://simki.unpkediri.ac.id/mahasiswa/file_artikel/2015/09.1.03.02.0299.pdf">Download</a></li>
 	<li>Catatan Komputer Saya: <a href="http://saifulindo.github.io/myblog/">Link</a> </a?</li>
 </ul>
-<h2>Sertifikasi Mikrotik:</h2>
+<h2>Mikrotik Certification</h2>
 <ul>
 	<li>MTCNA, #1604NA737</li>
 	<li>MTCRE, #1604RE226</li>
+	<li>ACTR, #ACTR0527</li>
+</ul>
+<h2>Cybrary Certification</h2>
+<ul>
+	<li>Subnettung, #SC-53d8bb79b-m674</li>
 </ul>
 <h2>Ability</h2>
 <p>Linux Server Operating System seperti: ClearOS, Debian, dan Ubuntu. Networking seperti: Git Server, VoIP Server, dan Nating. Web Building seperti, <a href="http://ppn.unpkediri.ac.id">UKM PPN</a>, <a href="http://classroom-smkti.github.io">Class Room SMKTI</a></p>
