update about me

--- a/about/index.html
+++ b/about/index.html
@@ -69,7 +69,7 @@
 </ul>
 <h2>Cybrary Certification</h2>
 <ul>
-	<li>Subnettung, #SC-53d8bb79b-m674</li>
+	<li>Subnetting, #SC-53d8bb79b-m674</li>
 </ul>
 <h2>Ability</h2>
 <p>Linux Server Operating System seperti: ClearOS, Debian, dan Ubuntu. Networking seperti: Git Server, VoIP Server, dan Nating. Web Building seperti, <a href="http://ppn.unpkediri.ac.id">UKM PPN</a>, <a href="http://classroom-smkti.github.io">Class Room SMKTI</a></p>
