--- a/about/index.html
+++ b/about/index.html
@@ -71,6 +71,8 @@
 <ul>
 	<li>Subnetting, #SC-53d8bb79b-m674</li>
 </ul>
+<h2>Curriculume Vitae</h2>
+<p>Download My Curriculume Vitae: <a href="http://saifulindo.github.io/files/Curriculum-Vitae-Muhammad-Syaiful.pdf">Link</a> </p>
 <h2>Ability</h2>
 <p>Linux Server Operating System seperti: ClearOS, Debian, dan Ubuntu. Networking seperti: Git Server, VoIP Server, dan Nating. Web Building seperti, <a href="http://ppn.unpkediri.ac.id">UKM PPN</a>, <a href="http://classroom-smkti.github.io">Class Room SMKTI</a></p>
 <h2>Minat</h2>
