posting page archive

--- a/about/index.html
+++ b/about/index.html
@@ -73,6 +73,8 @@
 </ul>
 <h2>Curriculume Vitae</h2>
 <p>Download My Curriculume Vitae: <a href="http://saifulindo.github.io/files/Curriculum-Vitae-Muhammad-Syaiful.pdf">Curriculum-Vitae-Muhammad-Syaiful.pdf</a> </p>
+<h2>My Archive</h2>
+<p>Kumpulan Panduan Belajar Komputer dan Jaringan: <a href="/archive/">archive</a> </p>
 <h2>Ability</h2>
 <p>Linux Server Operating System seperti: ClearOS, Debian, dan Ubuntu. Networking seperti: Git Server, VoIP Server, dan Nating. Web Building seperti, <a href="http://ppn.unpkediri.ac.id">UKM PPN</a>, <a href="http://classroom-smkti.github.io">Class Room SMKTI</a></p>
 <h2>Minat</h2>
