--- a/training/index.html
+++ b/training/index.html
@@ -47,11 +47,18 @@
 		<div id="main">
 			<div id="post">
 
-<h1>Training</h1>
+<h1>Training Networking</h1>
 <p id="permalink" class="print-only">http://saifulindo.github.io/training/</p>
 <p class="no-print created_at dateline">Published: <span class="reldate">Feb 02, 2017</span></p><p class="print-only created_at dateline">Published: <span>Feb 02, 2017</span><p class="print-only created_at dateline">Edited: <span>Feb 02, 2017</span></p>
 
-<p>Training Networking</p>
+<h3>Program</h3>
+<p>
+Program kami ada yang free ada yang berbayar, teknis trainingnya alat bisa bawa sendiri atau kita sediakan, begitu juga lokasi bisa menyiapkan sendiri atau kita siapkan. Kami juga menerima training private(trainer datang kerumah peserta), sedangkan untuk pembiayaan yang free maupun berbayar contact ke nomor +62 857-304-7129.
+</p>
+
+<h3>Catatan</h3>
+<p>Peserta mempunyai atau membawa laptop sendiri-sendiri</p>
+
 <p>MTCNA(Networking Certified Networking Accosiate)<br>Adapun materi yang dipelajari adalah:</p>
 <ul>
   <li>Network Fundamental</li>
@@ -75,17 +82,60 @@
     <ul>
       <li>Filter Rule</li>
       <li>Firewall Logging</li>
-      <li></li>
+      <li>Address List</li>
+      <li>Block Content</li>
+      <li>Connection Tracking</li>
+      <li>NAT MASQURADE and DstNAT</li>
+      <li>DNS Mikrotik</li>
     </ul>
   <li>Mikrotik Wireless</li>
+    <ul>
+      <li>Wireless Band</li>
+      <li>Wireless Channel</li>
+      <li>Interface Mode</li>
+      <li>Bandwidth Test</li>
+      <li>Wireless Tools</li>
+      <li>MAC Filtering</li>
+      <li>Access List and Connect List</li>
+      <li>Registrasion List</li>
+      <li>Default Authenticate and Default Forwarding</li>
+      <li>Nstream and Nstream Duel</li>
+      <li>Wireless Security</li>
+      <li>Wireless Encription</li>
+    </ul>
   <li>Mikrotik Bridging(Layer 2 Connection)</li>
+    <ul>
+      <li>Mikrotik Bridging</li>
+      <li>Mikrotik Wireless Bridging</li>
+      <li>Mikrotik WDS</li>
+      <li>Spanning Tree Protocol (STP)</li>
+    </ul>
   <li>Mikrotik Tunneling</li>
+    <ul>
+      <li>VPN Mikrotik</li>
+      <li>EoIP</li>
+      <li>PPTP</li>
+      <li>PPPoE</li>
+      <li>L2TP</li>
+    </ul>
   <li>Mikrotik QoS</li>
+    <ul>
+      <li>Bandwidth Limiter/Rate Limit</li>
+      <li>Simple Queue</li>
+      <li>Per Connection Queue</li>
+      <li>QoS Packet Flow</li>
+    </ul>
   <li>Network Management</li>
+    <ul>
+      <li>ARP Mode</li>
+      <li>DHCP Server</li>
+      <li>Web Proxy / Transparent</li>
+      <li>Mikrotik Storadge</li>
+      <li>Mikrotik Hotspot</li>
+      <li>IP Bridging</li>
+      <li>Walled Garden</li>
+    </ul>
 </ul>
-
-<h3>Catatan</h3>
-<p>Pesera Membawa Laptop Sendiri</p>
 
 <p>Jika kalian ingin bertanya, saya <a href="http://twitter.com/saifulindo">@saifulindo</a> ada di Twitter.</p>
 </div>
