--- a/training/index.html
+++ b/training/index.html
@@ -53,13 +53,13 @@
 
 <h3>Program</h3>
 <p>
-Program kami ada yang free ada yang berbayar, teknis trainingnya alat bisa bawa sendiri atau kita sediakan, begitu juga lokasi bisa menyiapkan sendiri atau kita siapkan. Kami juga menerima training private(trainer datang kerumah peserta), sedangkan untuk pembiayaan yang free maupun berbayar contact ke nomor +62 857-304-7129.
-</p>
-
+Program kami ada yang free ada yang berbayar, teknis trainingnya alat bisa bawa sendiri atau kita sediakan, begitu juga lokasi bisa menyiapkan sendiri atau kita siapkan. Kami juga menerima training private(trainer datang kerumah peserta), sedangkan untuk pembiayaan yang free maupun berbayar contact ke Custumer Service.</p>
+<h3>Kontak Custumer Service</h3>
+<p>Rofiq, WA(+62 858-5010-5833)</p>
+<h3>Jadwal</h3>
+<p>Untuk jadwal training ruting belum kita jaddwalkan, akan segera kami update. Sedangkan untuk training undangan dan private bisa kontak ke custumer service kami.</p>
 <h3>Catatan</h3>
-<p>Peserta mempunyai atau membawa laptop sendiri-sendiri</p>
-
-<p>MTCNA(Networking Certified Networking Accosiate)<br>Adapun materi yang dipelajari adalah:</p>
+<p>Training dilaksanakan di sekarisidenan Kediri, Lokasi training yang kami sediakan berada di KOTA Kediri, Peserta mempunyai atau membawa laptop sendiri-sendiri, Adapun materi yang dipelajari adalah MTCNA(Networking Certified Networking Accosiate), seperti berikut:</p>
 <ul>
   <li>Network Fundamental</li>
     <ul>
