--- a/training/index.html
+++ b/training/index.html
@@ -57,7 +57,7 @@ Program kami ada yang free ada yang berbayar, teknis trainingnya alat bisa bawa 
 <h3>Kontak Custumer Service</h3>
 <p>Rofiq, WA(+62 858-5010-5833)</p>
 <h3>Jadwal</h3>
-<p>Untuk jadwal training ruting belum kita jaddwalkan, akan segera kami update. Sedangkan untuk training undangan dan private bisa kontak ke custumer service kami.</p>
+<p>Untuk jadwal training rutin belum kita jaddwalkan, akan segera kami update. Sedangkan untuk training undangan dan private bisa kontak ke custumer service kami.</p>
 <h3>Catatan</h3>
 <p>Training dilaksanakan di sekarisidenan Kediri, Lokasi training yang kami sediakan berada di KOTA Kediri, Peserta mempunyai atau membawa laptop sendiri-sendiri, Adapun materi yang dipelajari adalah MTCNA(Networking Certified Networking Accosiate), seperti berikut:</p>
 <ul>
@@ -136,6 +136,8 @@ Program kami ada yang free ada yang berbayar, teknis trainingnya alat bisa bawa 
       <li>Walled Garden</li>
     </ul>
 </ul>
+<h3>Penutup</h3>
+<p>Selain Materi MTCNA, kami juga menyediakan training MTCRE(Mikrotik Certified Routing Engineering), CCNA(Cisco Certified Network Accosiate), PHP, CSS, HTML dan JavaScript. Selain training kami juga menerima jasa Instalasi Server dan Jaringan.</p>
 
 <p>Jika kalian ingin bertanya, saya <a href="http://twitter.com/saifulindo">@saifulindo</a> ada di Twitter.</p>
 </div>
