Edited word kontak

--- a/training/index.html
+++ b/training/index.html
@@ -53,8 +53,8 @@
 
 <h3>Program</h3>
 <p>
-Program kami ada yang free ada yang berbayar, teknis trainingnya alat bisa bawa sendiri atau kita sediakan, begitu juga lokasi bisa menyiapkan sendiri atau kita siapkan. Kami juga menerima training private(trainer datang kerumah peserta), sedangkan untuk pembiayaan yang free maupun berbayar contact ke Custumer Service.</p>
-<h3>Kontak Custumer Service</h3>
+Program kami ada yang free ada yang berbayar, teknis trainingnya alat bisa bawa sendiri atau kita sediakan, begitu juga lokasi bisa menyiapkan sendiri atau kita siapkan. Kami juga menerima training private(trainer datang kerumah peserta), sedangkan untuk pembiayaan yang free maupun berbayar contact ke kami.</p>
+<h3>Kontak</h3>
 <p>Rofiq, WA(+62 858-5010-5833)</p>
 <h3>Jadwal</h3>
 <p>Untuk jadwal training rutin belum kita jaddwalkan, akan segera kami update. Sedangkan untuk training undangan dan private bisa kontak ke custumer service kami.</p>
