--- a/training/index.html
+++ b/training/index.html
@@ -59,7 +59,7 @@ Program kami ada yang free ada yang berbayar, teknis trainingnya alat bisa bawa 
 <h3>Jadwal</h3>
 <p>Untuk jadwal training rutin belum kita jadwalkan, akan segera kami update. Sedangkan untuk training undangan dan private bisa kontak kami.</p>
 <h3>Catatan</h3>
-<p>Training dilaksanakan di sekarisidenan Kediri, Lokasi training yang kami sediakan berada di KOTA Kediri, Peserta mempunyai atau membawa laptop sendiri-sendiri, Adapun materi yang dipelajari adalah MTCNA(Networking Certified Networking Accosiate), seperti berikut:</p>
+<p>Training dilaksanakan di sekarisidenan Kediri, Lokasi training yang kami sediakan berada di KOTA Kediri, Peserta mempunyai atau membawa laptop sendiri-sendiri, Adapun materi yang dipelajari adalah MTCNA(Mikrotik Certified Networking Accosiate), seperti berikut:</p>
 <ul>
   <li>Network Fundamental</li>
     <ul>
