--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 		<div id="header">
 			<h1><a href="/"><span id="nvie">saifulindo</span><span id="dot">.</span><span id="ext">github.io</span></a></h1>
 			<ul>
-                <!--<li id="home"  class='current'><span class="active" title="You're here.">Home</span></li> -->
-                <li id="myblog" ><a href="/training/">Training</a></li>
+                <li id="home"  class='current'><span class="active" title="You're here.">Home</span></li>
+                <!--<li id="myblog" ><a href="/training/">Training</a></li>-->
                 <li id="posts" ><a href="/posts/">Posts</a></li>
                 <li id="posts" ><a href="/salaf/">Salaf</a></li>
                 <li id="about" ><a href="/about/">About me</a></li>
