--- a/lapak/index.html
+++ b/lapak/index.html
@@ -90,7 +90,7 @@
 <p><b>Flashdisk Eve-NG</b> ini sudah disertakan ebook, yang memandu anda untuk melakukan tahapan instalasi dari awal maupun tinggal menggunkan, jika ketika melakukan proses instalasi terjadi kendala kami support 7x24 Jam, dengan menghubungi ke nomor <b>WA: 085730947129</b></p>
 
 <p>Harga Flashdisk Eve-NG: <b>250.000</b></p>
-
+</div>
 		</div>
 		<div id="footer">
             <p>Muhammad Syaiful&#8217;s a teacher and active in the community, interested in the 
