view navigation lapak

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <!--<li id="myblog" ><a href="/training/">Training</a></li>-->
                 <li id="posts" ><a href="/posts/">Posts</a></li>
                 <li id="posts" ><a href="/salaf/">Salaf</a></li>
+                <li id="posts" ><a href="/lapak/">Lapak</a></li>
                 <li id="about" ><a href="/about/">About me</a></li>
 			</ul>
         </div>
