edited index lapak

--- a/lapak/index.html
+++ b/lapak/index.html
@@ -90,7 +90,8 @@
 
 <p><b>Flashdisk Eve-NG</b> ini sudah disertakan ebook, yang memandu anda untuk melakukan tahapan instalasi dari awal maupun tinggal menggunkan, Apabila anda ketika melakukan proses instalasi terjadi kendala kami support 6x24 Jam, dengan menghubungi ke nomor <b>WA: 085730947129</b> a/n <b>M. Saiful Mukharom</b>, bisa dipanggil Mas Syaiful.</p>
 
-<p>Harga Flashdisk Eve-NG: <b>250.000</b></p>
+<p>Harga Flashdisk Eve-NG: <b>250.000</b><hr>
+Jika, menggunakan jaza konfigurasi kami tambah biaya <b>100.000</b>, untuk area kediri kita datangi lokasinya sedangkan untuk luar kediri kita remote.</p>
 </div><hr />
 </div>
 		</div>
