--- a/about/index.html
+++ b/about/index.html
@@ -59,7 +59,7 @@
 <ul>
 	<li>Blog Belajar Linux: <a href="https://github.com/saifulindo/belajar-linux/tree/gh-pages">Source</a>, <a href="http://saifulindo.github.io/belajar-linux/">Blog</a></li>
 	<li>Artikel Ilmiah: Merancang Git Server dengan Pendekatan GitHub Social Coding dalam Peningkatan Pembelajaran Mahasiswa <a href="https://simki.unpkediri.ac.id/mahasiswa/file_artikel/2015/09.1.03.02.0299.pdf">Download</a></li>
-	<li>Catatan Komputer Saya: <a href="http://saifulindo.github.io/myblog/">Link</a> </a?</li>
+	<li>Catatan Komputer Saya: <a href="https://saifulindo.github.io/myblog/">Link</a> </a?</li>
 </ul>
 <h2>Mikrotik Certification</h2>
 <ul>
