--- a/lapak/index.html
+++ b/lapak/index.html
@@ -51,11 +51,11 @@
 <p>
 <ul>
 	<li>Class Standard: <b>Rp. 25.000</b></li>
-	Support Remote Instalasi 1x24 Jam Weekend
+	<p>Support Remote Instalasi 1x24 Jam Weekend</p>
 	<li>Class Premium: <b>Rp. 50.000</b></li>
-	Support Remote Instalsi 3x24 Jam (Senin-Rabu)
+	<p>Support Remote Instalsi 3x24 Jam (Senin-Rabu)</p>
 	<li>Class Businnes: <b>Rp. 100.000</b></li>
-	Support Remote Instalsi 6x24 Jam (Senin-Sabtu)
+	<p>Support Remote Instalsi 6x24 Jam (Senin-Sabtu)</p>
 </ul>
 <p>Daftar Isi:</p>
 	<ul>
