Edited fixed finish

--- a/lapak/index.html
+++ b/lapak/index.html
@@ -50,12 +50,13 @@
 <p>Tersedia E-Book Eve-NG:</p>
 <p>
 <ul>
+	<p>
 	<li>Class Standard: <b>Rp. 25.000</b></li>
-	<p>Support Remote Instalasi 1x24 Jam Weekend</p>
+	Support Remote Instalasi 1x24 Jam Weekend
 	<li>Class Premium: <b>Rp. 50.000</b></li>
-	<p>Support Remote Instalsi 3x24 Jam (Senin-Rabu)</p>
+	Support Remote Instalsi 3x24 Jam (Senin-Rabu)
 	<li>Class Businnes: <b>Rp. 100.000</b></li>
-	<p>Support Remote Instalsi 6x24 Jam (Senin-Sabtu)</p>
+	Support Remote Instalsi 6x24 Jam (Senin-Sabtu)</p>
 </ul>
 <p>Daftar Isi:</p>
 	<ul>
