--- a/lapak/index.html
+++ b/lapak/index.html
@@ -50,13 +50,9 @@
 <p>Tersedia E-Book Eve-NG:</p>
 <p>
 <ul>
-	<p>
-	<li>Class Standard: <b>Rp. 25.000</b></li>
-	Support Remote Instalasi 1x24 Jam Weekend
-	<li>Class Premium: <b>Rp. 50.000</b></li>
-	Support Remote Instalsi 3x24 Jam (Senin-Rabu)
-	<li>Class Businnes: <b>Rp. 100.000</b></li>
-	Support Remote Instalsi 6x24 Jam (Senin-Sabtu)</p>
+	<li>Class Standard: <b>Rp. 25.000</b><br>Support Remote Instalasi 1x24 Jam Weekend</li>
+	<li>Class Premium: <b>Rp. 50.000</b><br>Support Remote Instalsi 3x24 Jam (Senin-Rabu)</li>
+	<li>Class Businnes: <b>Rp. 100.000</b><br>Support Remote Instalsi 6x24 Jam (Senin-Sabtu)</li>
 </ul>
 <p>Daftar Isi:</p>
 	<ul>
