insert image topologi

--- a/lapak/index.html
+++ b/lapak/index.html
@@ -54,6 +54,8 @@
 	<li>Class Premium: <b>Rp. 50.000</b><br>Support Remote Instalsi 3x24 Jam (Senin-Rabu)</li>
 	<li>Class Businnes: <b>Rp. 100.000</b><br>Support Remote Instalsi 6x24 Jam (Senin-Sabtu)</li>
 </ul>
+<p>topologi</p>
+<p><img src="/img/2018/05/topologi-school.jpg" class="center thin-bordered" alt=""/></p>
 <p>Daftar Isi:</p>
 	<ul>
 		<li>Topologi</li>
