--- a/about/index.html
+++ b/about/index.html
@@ -28,7 +28,7 @@
 	</head>
 	<body>
 		<div id="header">
-			<h1><a href="/"><span id="nvie">saifulindo</span><span id="dot">.</span><span id="ext">github.io</span></a></h1>
+			<h1><a href="/"><span id="nvie">saiful</span><span id="dot"></span><span id="ext">indo</span></a></h1>
 			<ul>
                 <li id="home" ><a href="/">Home</a></li>
                 <li id="myblog" ><a href="/myblog/">My Blog</a></li>
