--- a/gp/refleksi-keterkaitan-pembelajaran-berdiferensiasi-sosial-emosianoal-dan-coaching/index.html
+++ b/gp/refleksi-keterkaitan-pembelajaran-berdiferensiasi-sosial-emosianoal-dan-coaching/index.html
@@ -47,7 +47,7 @@
 		<div id="main">
 			<div id="post">
 
-<h1>Refleksi Keterkaitan Pembeljaran Berdiferensiasai, Sosial Emosional dan Coaching</h1>
+<h1>Refleksi Keterkaitan Pembeljaran Berdiferensiasi, Sosial Emosional dan Coaching</h1>
 <p id="permalink" class="print-only">http://saifulindo.github.io/gp/refleksi-keterkaitan-pembelajaran-berdiferensiasi-sosial-emosianoal-dan-coaching/</p>
 <p class="no-print created_at dateline">Published: <span class="reldate">Sept 09, 2023</span></p><p class="print-only created_at dateline">Published: <span>Sept 09, 2023</span></p>
 
