--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -104,18 +104,16 @@
     <header class="bg-white sticky top-0 z-40 border-b" style="border-color: #e5e7eb;">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <div class="text-2xl font-bold font-serif" style="color: var(--dark-color)">
-                <a href="#">SAIFULINDO</a>
+                <a href="https://saifulindo.github.io/">Home</a>
             </div>
             <div class="hidden md:flex space-x-8 font-semibold">
                 <a href="#profil" class="text-gray-600 hover:text-[var(--primary-color)]">Profil</a>
                 <a href="#portofolio" class="text-gray-600 hover:text-[var(--primary-color)]">Portofolio</a>
-                <a href="#implementasi" class="text-gray-600 hover:text-[var(--primary-color)]">Implementasi</a>
             </div>
             <div class="md:hidden">
                 <select onchange="window.location.href=this.value" class="bg-gray-100 border border-gray-300 rounded-md p-2">
                     <option value="#profil">Profil</option>
                     <option value="#portofolio">Portofolio</option>
-                    <option value="#implementasi">Implementasi</option>
                 </select>
             </div>
         </nav>
@@ -147,9 +145,9 @@
                     </nav>
                 </div>
                 <div class="py-6">
-                    <div id="pengembangan-content" class="tab-content"><h3 class="text-xl font-semibold mb-4 text-[var(--dark-color)]">Kegiatan Pengembangan Diri (3 Tahun Terakhir)</h3><ul class="list-disc list-inside space-y-2 text-[var(--secondary-text)]"><li>Pendidikan Guru Penggerak Kurikulum Merdeka - Kementerian Pendidikan (2023)</li><li>Workshop Pemanfaatan AI untuk Pembelajaran - MGMP Kota Kediri (2024)</li></ul></div>
-                    <div id="pendampingan-content" class="tab-content hidden"><h3 class="text-xl font-semibold mb-4 text-[var(--dark-color)]">Pendampingan Teman Sejawat (3 Tahun Terakhir)</h3><ul class="list-disc list-inside space-y-2 text-[var(--secondary-text)]"><li>Menjadi mentor implementasi Platform Merdeka Mengajar (2025)</li><li>Pendampingan pembuatan media ajar interaktif (2024)</li></ul></div>
-                    <div id="organisasi-content" class="tab-content hidden"><h3 class="text-xl font-semibold mb-4 text-[var(--dark-color)]">Pengalaman Organisasi Profesi</h3><ul class="list-disc list-inside space-y-2 text-[var(--secondary-text)]"><li>Anggota Sekretaris MGMP TKJ KOTA Kediri(2022-2024)</li><li>Ketua MGMP TKJ  Kota Kediri (2025 - 2027)</li></ul></div>
+                    <div id="pengembangan-content" class="tab-content"><h3 class="text-xl font-semibold mb-4 text-[var(--dark-color)]">Kegiatan Pengembangan Diri (3 Tahun Terakhir)</h3><ul class="list-disc list-inside space-y-2 text-[var(--secondary-text)]"><li>Pendidikan Guru Penggerak Kurikulum Merdeka - Kementerian Pendidikan (2023)</li></ul></div>
+                    <div id="pendampingan-content" class="tab-content hidden"><h3 class="text-xl font-semibold mb-4 text-[var(--dark-color)]">Pendampingan Teman Sejawat (3 Tahun Terakhir)</h3><ul class="list-disc list-inside space-y-2 text-[var(--secondary-text)]"><li>Pendampingan Komunitas Belajar tema Budaya Positif (2024)</li></ul></div>
+                    <div id="organisasi-content" class="tab-content hidden"><h3 class="text-xl font-semibold mb-4 text-[var(--dark-color)]">Pengalaman Organisasi Profesi</h3><ul class="list-disc list-inside space-y-2 text-[var(--secondary-text)]"><li>Sekretaris MGMP TKJ KOTA Kediri(2022-2024)</li><li>Ketua MGMP TKJ  Kota Kediri (2025 - 2027)</li></ul></div>
                     <div id="karya-content" class="tab-content hidden"><h3 class="text-xl font-semibold mb-4 text-[var(--dark-color)]">Karya Tulis & Inovasi</h3><div class="space-y-4"><div class="p-4 rounded-md border bg-white"><h4 class="font-semibold text-[var(--dark-color)]">Buku "Strategi Jitu Menulis Esai" (2025)</h4><p class="text-sm text-[var(--secondary-text)]">Buku panduan praktis untuk siswa SMA.</p><a href="#" class="text-[var(--primary-color)] hover:underline text-sm font-semibold">Lihat Naskah (PDF)</a></div></div></div>
                     <div id="prestasi-content" class="tab-content hidden"><h3 class="text-xl font-semibold mb-4 text-[var(--dark-color)]">Prestasi & Penghargaan</h3><ul class="list-disc list-inside space-y-2 text-[var(--secondary-text)]"><li>Belum Ada</li></ul></div>
                 </div>
