--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -145,10 +145,10 @@
                     </nav>
                 </div>
                 <div class="py-6">
-                    <div id="pengembangan-content" class="tab-content"><h3 class="text-xl font-semibold mb-4 text-[var(--dark-color)]">Kegiatan Pengembangan Diri (3 Tahun Terakhir)</h3><ul class="list-disc list-inside space-y-2 text-[var(--secondary-text)]"><li>Pendidikan Guru Penggerak Kurikulum Merdeka - Kementerian Pendidikan (2023)</li></ul></div>
-                    <div id="pendampingan-content" class="tab-content hidden"><h3 class="text-xl font-semibold mb-4 text-[var(--dark-color)]">Pendampingan Teman Sejawat (3 Tahun Terakhir)</h3><ul class="list-disc list-inside space-y-2 text-[var(--secondary-text)]"><li>Pendampingan Komunitas Belajar tema Budaya Positif (2024)</li></ul></div>
-                    <div id="organisasi-content" class="tab-content hidden"><h3 class="text-xl font-semibold mb-4 text-[var(--dark-color)]">Pengalaman Organisasi Profesi</h3><ul class="list-disc list-inside space-y-2 text-[var(--secondary-text)]"><li>Sekretaris MGMP TKJ KOTA Kediri(2022-2024)</li><li>Ketua MGMP TKJ  Kota Kediri (2025 - 2027)</li></ul></div>
-                    <div id="karya-content" class="tab-content hidden"><h3 class="text-xl font-semibold mb-4 text-[var(--dark-color)]">Karya Tulis & Inovasi</h3><div class="space-y-4"><div class="p-4 rounded-md border bg-white"><h4 class="font-semibold text-[var(--dark-color)]">Buku "Strategi Jitu Menulis Esai" (2025)</h4><p class="text-sm text-[var(--secondary-text)]">Buku panduan praktis untuk siswa SMA.</p><a href="#" class="text-[var(--primary-color)] hover:underline text-sm font-semibold">Lihat Naskah (PDF)</a></div></div></div>
+                    <div id="pengembangan-content" class="tab-content"><h3 class="text-xl font-semibold mb-4 text-[var(--dark-color)]">Kegiatan Pengembangan Diri (3 Tahun Terakhir)</h3><ul class="list-disc list-inside space-y-2 text-[var(--secondary-text)]"><li>Pendidikan Guru Penggerak Kurikulum Merdeka - Kementerian Pendidikan (2023) <button onclick="openPdfModal('M. Saiful Mukharom.pgp.sertifikat-calon-guru-penggerak-120654317351802230808.pdf')" class="text-[var(--primary-color)] hover:underline text-sm font-semibold">Lihat Sertifikat (PDF)</button></li><li>Pelatihan Mandiri Topik Kurikulum Merdeka (2024) <button onclick="openPdfModal('3a720f07-b2b1-463f-ae17-ae81926fde4e.pdf')" class="text-[var(--primary-color)] hover:underline text-sm font-semibold">Lihat Sertifikat (PDF)</button></li><li>Pelatihan Mandiri Topik Merdeka Belajar (2024) <button onclick="openPdfModal('813b9b6d-520b-49d9-97da-e2fe2cf2eb52.pdf')" class="text-[var(--primary-color)] hover:underline text-sm font-semibold">Lihat Sertifikat (PDF)</button></li></ul></div>
+                    <div id="pendampingan-content" class="tab-content hidden"><h3 class="text-xl font-semibold mb-4 text-[var(--dark-color)]">Pendampingan Teman Sejawat (3 Tahun Terakhir)</h3><ul class="list-disc list-inside space-y-2 text-[var(--secondary-text)]"><li>Aksi Nyata - Budaya Positif (Disiplin Positif Melalui Keyakinan Kelas) (2023) <button onclick="openPdfModal('https://guru.kemdikbud.go.id/bukti-karya/video/333967')" class="text-[var(--primary-color)] hover:underline text-sm font-semibold">Lihat PMM (Link)</button></li><li>Coaching Supervisi Akademik (2023) <button onclick="openPdfModal('https://guru.kemdikbud.go.id/bukti-karya/video/500175')" class="text-[var(--primary-color)] hover:underline text-sm font-semibold">Lihat PMM (Link)</button></li><li>Aksi Nyata Topik Merdeka Belajar (Memahami Makna Merdeka Belajar dalam Pembelajaran) (2024) <button onclick="openPdfModal('Aksi Nyata Topik Merdeka Belajar.pdf')" class="text-[var(--primary-color)] hover:underline text-sm font-semibold">Lihat Sertifikat dan Bukti (PDF)</button></li></ul></div>
+                    <div id="organisasi-content" class="tab-content hidden"><h3 class="text-xl font-semibold mb-4 text-[var(--dark-color)]">Pengalaman Organisasi Profesi</h3><ul class="list-disc list-inside space-y-2 text-[var(--secondary-text)]"><li>Sekretaris MGMP TKJ KOTA Kediri (2023 - 2024) <button onclick="openPdfModal('SK MGMP 2023-highlight.pdf')" class="text-[var(--primary-color)] hover:underline text-sm font-semibold">Lihat Surat Keterangan (PDF)</button></li><li>Sekretaris Komunitas Belajar SMEKSA Tahun Pelajaran 2024/2025 (2024) <button onclick="openPdfModal('SK_KOMBEL SMEKSA.pdf')" class="text-[var(--primary-color)] hover:underline text-sm font-semibold">Lihat Surat Keterangan (PDF)</button></li><li>Ketua MGMP TKJ  Kota Kediri (2025 - 2027) <button onclick="openPdfModal('SK MGMP SMK 2025-2027.pdf')" class="text-[var(--primary-color)] hover:underline text-sm font-semibold">Lihat Surat Keterangan (PDF)</button></li></ul></div>
+                    <div id="karya-content" class="tab-content hidden"><h3 class="text-xl font-semibold mb-4 text-[var(--dark-color)]">Karya Tulis & Inovasi</h3><div class="space-y-4"><div class="p-4 rounded-md border bg-white"><h4 class="font-semibold text-[var(--dark-color)]">Proyek Inovasi MESEMJA: Laboratorium Jaringan Portabel untuk Siswa SMK (2023)</h4><p class="text-sm text-[var(--secondary-text)]">MESEMJA (Meja Simulator & Emulator Jaringan) adalah solusi untuk tantangan pembelajaran praktik di SMK. Proyek ini menghasilkan serangkaian meja lab jaringan yang dapat dipindah-pindah, merepresentasikan komponen jaringan dunia nyata seperti kantor pusat, cabang, dan server farm, untuk memberikan pengalaman belajar yang interaktif dan mendalam.</p><button onclick="openPdfModal('Karya Tulis Ilmiah mesemja .pdf')" class="text-[var(--primary-color)] hover:underline text-sm font-semibold">Lihat Naskah (PDF)</button></div></div></div>
                     <div id="prestasi-content" class="tab-content hidden"><h3 class="text-xl font-semibold mb-4 text-[var(--dark-color)]">Prestasi & Penghargaan</h3><ul class="list-disc list-inside space-y-2 text-[var(--secondary-text)]"><li>Belum Ada</li></ul></div>
                 </div>
             </div>
@@ -159,9 +159,9 @@
             <div class="text-center mb-10">
                  <h2 class="section-title text-center mb-4 animate-on-scroll">Bukti Implementasi Karya Inovasi</h2>
             </div>
-            <div id="galeri-karya">
+            <!-- <div id="galeri-karya">
                 <div class="item-summary animate-on-scroll"><h3 class="text-2xl mb-2"><a href="#" class="hover:text-[var(--primary-color)]">Metode Pembelajaran Interaktif</a></h3><p class="text-[var(--secondary-text)] mb-4">Siswa berdiskusi aktif menggunakan media papan tulis digital. Terjadi peningkatan keaktifan sebesar 30%.</p><img src="https://placehold.co/800x450/6B91C1/FFFFFF?text=Implementasi" alt="Metode Pembelajaran Interaktif" class="w-full h-auto object-cover rounded"></div>
-            </div>
+            </div> -->
         </section>
     </main>
 
@@ -190,6 +190,14 @@
         </div>
     </div>
 
+    <!-- Modal PDF Viewer -->
+    <div id="pdf-viewer-modal" class="fixed inset-0 bg-black bg-opacity-75 hidden flex items-center justify-center p-4 z-50">
+        <div class="bg-white rounded-lg w-full max-w-4xl h-[90vh] flex flex-col relative">
+            <button id="close-pdf-modal-btn" class="absolute -top-3 -right-3 bg-white rounded-full h-8 w-8 flex items-center justify-center text-gray-700 hover:text-black text-2xl font-bold z-10">&times;</button>
+            <iframe id="pdf-iframe" src="" class="w-full h-full border-0" frameborder="0"></iframe>
+        </div>
+    </div>
+
     <script>
         // --- Skrip Navigasi Tab ---
         function changeTab(tabName) {
@@ -208,6 +216,34 @@
         openModalBtn.addEventListener('click', showModal);
         closeModalBtn.addEventListener('click', hideModal);
         modal.addEventListener('click', (e) => { if (e.target === modal) hideModal(); });
+
+        // --- Skrip PDF Viewer Modal ---
+        const pdfModal = document.getElementById('pdf-viewer-modal');
+        const closePdfModalBtn = document.getElementById('close-pdf-modal-btn');
+        const pdfIframe = document.getElementById('pdf-iframe');
+
+        function openPdfModal(pdfUrl) {
+            // Pastikan Anda menempatkan file PDF di folder yang sama, atau berikan URL lengkap.
+            if (pdfUrl) {
+                pdfIframe.src = pdfUrl;
+                pdfModal.classList.remove('hidden');
+            } else {
+                alert('Tautan PDF tidak valid.');
+            }
+        }
+
+        function closePdfModal() {
+            pdfIframe.src = ''; // Hentikan pemuatan PDF untuk menghemat sumber daya
+            pdfModal.classList.add('hidden');
+        }
+
+        closePdfModalBtn.addEventListener('click', closePdfModal);
+        pdfModal.addEventListener('click', (e) => {
+            // Tutup modal jika area luar (latar belakang) diklik
+            if (e.target === pdfModal) {
+                closePdfModal();
+            }
+        });
 
         // --- Skrip Tambah Karya ---
         document.getElementById('add-karya-btn').addEventListener('click', function() {
@@ -251,6 +287,5 @@
     </script>
 </body>
 </html>
-
 
 
