Posting Bukti Implementasi SMK Akademy

--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -160,9 +160,9 @@
             <div class="text-center mb-10">
                  <h2 class="section-title text-center mb-4 animate-on-scroll">Bukti Implementasi</h2>
             </div>
-            <!-- <div id="galeri-karya">
-                <div class="item-summary animate-on-scroll"><h3 class="text-2xl mb-2"><a href="#" class="hover:text-[var(--primary-color)]">Metode Pembelajaran Interaktif</a></h3><p class="text-[var(--secondary-text)] mb-4">Siswa berdiskusi aktif menggunakan media papan tulis digital. Terjadi peningkatan keaktifan sebesar 30%.</p><img src="https://placehold.co/800x450/6B91C1/FFFFFF?text=Implementasi" alt="Metode Pembelajaran Interaktif" class="w-full h-auto object-cover rounded"></div>
-            </div> -->
+            <div id="galeri-karya">
+                <div class="item-summary animate-on-scroll"><h3 class="text-2xl mb-2"><a href="#" class="hover:text-[var(--primary-color)]">SMK Academy: Menjembatani Kelas dan Industri, Melahirkan Profesional Muda Bersertifikat</a></h3><p class="text-[var(--secondary-text)] mb-4">"SMK Academy" adalah inovasi saya untuk menjembatani kelas dan industri, melahirkan profesional muda TJKT yang kompeten bersertifikat internasional.</p><img src="Sertifikasi-tahap1-2025.jpg" alt="Metode Pembelajaran Interaktif" class="w-full h-auto object-cover rounded"></div>
+            </div>
         </section>
     </main>
 
