Upload Bukti Karya Sertifikasi Mikrotik

--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -184,6 +184,12 @@
             <div id="galeri-karya">
                 <!-- Data dari Firebase akan ditampilkan di sini -->
             </div>
+                <div class="item-summary animate-on-scroll">
+                    <h3 class="text-2xl mb-2">MK Academy: Menjembatani Kelas dan Industri, Melahirkan Profesional Muda Bersertifikat</h3>
+                    <p class="text-[var(--secondary-text)] mb-4">"SMK Academy" adalah inovasi saya untuk menjembatani kelas dan industri, melahirkan profesional muda TJKT yang kompeten bersertifikat internasional.</p>
+                    <!-- Ganti URL gambar di bawah ini dengan URL gambar Anda yang sudah diunggah di tempat lain -->
+                    <img src="Sertifikasi-tahap1-2025.jpg" alt="Proyek Alat Jaringan Buatan Siswa" class="w-full h-auto object-cover rounded">
+                </div>
         </section>
     </main>
 
