--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -145,7 +145,7 @@
         <section id="profil" class="mb-16 pt-8 pb-8 text-center animate-on-scroll">
             <img src="pas-photo.jpg" alt="Foto Profil M. Saiful Mukharom" class="w-36 h-36 rounded-full mx-auto mb-6 object-cover">
             <h1 class="text-4xl md:text-5xl font-bold text-[var(--dark-color)]">M. Saiful Mukharom, S.Kom.</h1>
-            <p class="text-lg text-[var(--secondary-text)] mt-3 mb-6">Seorang pendidik yang bersemangat dalam inovasi pembelajaran dan pengembangan profesional berkelanjutan.</p>
+            <p class="text-lg text-[var(--secondary-text)] mt-3 mb-6">Sebagai seorang pendidik, saya berkomitmen pada inovasi pembelajaran dan pengembangan kompetensi berkelanjutan, didorong oleh visi untuk membimbing siswa menjadi pribadi yang percaya diri, berpikir kritis, dan siap menjawab tantangan zaman.</p>
             <div class="mt-6 flex justify-center space-x-6">
                 <a href="https://www.linkedin.com/in/ritnesaif/" target="_blank" rel="noopener noreferrer" class="text-[var(--secondary-text)] hover:text-[var(--primary-color)]" title="LinkedIn"><svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg></a>
                 <a href="https://web.facebook.com/saiful.mukharom/" target="_blank" rel="noopener noreferrer" class="text-[var(--secondary-text)] hover:text-[var(--primary-color)]" title="Facebook"><svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path></svg></a>
@@ -445,3 +445,4 @@
 </body>
 
 </html>
+
