Tambah flayer dan hiden tahun

--- a/salaf/antara-mukmin-dan-dunia/index.html
+++ b/salaf/antara-mukmin-dan-dunia/index.html
@@ -51,6 +51,8 @@
 
 <p><em>Rangkuman Poin Kajian Ustadz Ammi</em></p>
 
+<p><img src="/img/2025/10/flayer-antara-mukmin-dan-dunia.jpg" class="center thin-bordered" alt="Flayer Kajian Antara Mukmin dan Dunia"/></p>
+
 <p>Kita sering kali mengkaji tema-tema tentang zuhud, qanaah, dan bagaimana seorang mukmin harus bersikap terhadap dunia. Namun, seringkali kita merasa berat untuk mengamalkannya. Kita merasa lebih bahagia ketika mendapat harta daripada ketika mendapat ilmu.</p>
 
 <p>Mengapa demikian? Karena interaksi kita dengan dunia lebih dominan berkaitan dengan <strong>amalan batin (suasana hati)</strong>, bukan sekadar hukum halal-haram.</p>
